Fix: align colour spec

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-        @apply bg-slate-950 text-gray-100 transition-colors ease-in-out duration-200;
+        @apply text-black bg-white dark:bg-gray-900 dark:text-white transition-colors ease-in-out duration-200;
     }
 }
 
